Resolves bug #18 (blank messages collapse).

--- a/design.css
+++ b/design.css
@@ -36,6 +36,7 @@ body {
 
 body .line {
  	border-top:1px solid #efefef;
+ 	display: block;
 }
 
 body .line.coalesced {
